@@ -7,6 +7,7 @@ package com.intel.dai.dsimpl.voltdb;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.intel.dai.dsapi.*;
+import com.intel.logging.Logger;
 import org.apache.commons.collections4.CollectionUtils;
 
 import java.io.*;
@@ -16,10 +17,14 @@ import java.nio.file.Path;
 import java.util.Comparator;
 import java.util.List;
 
+/**
+ * This class contains methods that convert canonical inventory information amongst different formats.  The
+ * possible formats are POJO, json string and json file.
+ */
 public class HWInvUtilImpl implements HWInvUtil {
-    private transient Gson gson;
+    public HWInvUtilImpl(Logger log) {
+        logger = log;
 
-    public HWInvUtilImpl() {
         GsonBuilder builder = new GsonBuilder();
         builder.setPrettyPrinting();
         gson = builder.create();
@@ -32,10 +37,8 @@ public class HWInvUtilImpl implements HWInvUtil {
                     new InputStreamReader(new FileInputStream(canonicalHWInvPath.toString()),
                             StandardCharsets.UTF_8));
             return gson.fromJson(br, HWInvTree.class);
-        } catch (RuntimeException e) {
-            return null;
-        } catch (Exception e) {
-            // EOFException can occur if the json is incomplete
+        } catch (RuntimeException | IOException e) {
+            logger.fatal("GSON parsing error: %s", e.getMessage());
             return null;
         }
     }
@@ -44,8 +47,8 @@ public class HWInvUtilImpl implements HWInvUtil {
     public HWInvTree toCanonicalPOJO(String canonicalHWInvJson) {
         try {
             return gson.fromJson(canonicalHWInvJson, HWInvTree.class);
-        } catch (Exception e) {
-            // EOFException can occur if the json is incomplete
+        } catch (RuntimeException e) {
+            logger.fatal("GSON parsing error: %s", e.getMessage());
             return null;
         }
     }
@@ -74,12 +77,13 @@ public class HWInvUtilImpl implements HWInvUtil {
             return gson.fromJson(canonicalHWInvHistoryJson, HWInvHistory.class);
         } catch (Exception e) {
             // EOFException can occur if the json is incomplete
+            logger.fatal("GSON parsing error: %s", e.getMessage());
             return null;
         }
     }
 
     @Override
-    public void fromStringToFile(String str, String outputFileName) throws IOException {
+    public void toFile(String str, String outputFileName) throws IOException {
         try (BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(new FileOutputStream(outputFileName),
                 StandardCharsets.UTF_8))) {
             bw.write(str);
@@ -89,11 +93,14 @@ public class HWInvUtilImpl implements HWInvUtil {
 
     @Override
     public String fromFile(Path inputFilePath) throws IOException {
-        return new String(Files.readAllBytes(inputFilePath), StandardCharsets.UTF_8);
+        return Files.readString(inputFilePath, StandardCharsets.UTF_8);
     }
 
     @Override
     public List<HWInvLoc> subtract(List<HWInvLoc> list0, List<HWInvLoc> list1) {
         return (List<HWInvLoc>) CollectionUtils.subtract(list0, list1);
     }
+
+    private final transient Gson gson;
+    private final Logger logger;
 }
